# arm-lsp

./: .gitignore  README.md  add.json  save.json  test.lua  teste.asm  teste_gd.asm
arm-lsp/: Cargo.toml  test.lua  teste.asm
arm-lsp/src/: main.rs
codegen/: README.md  main.py  math.txt
serde_play/: Cargo.toml  all.json  all_pretty.json  msr.json  msr_and_mrs.json  msr_and_mrs_pretty.json  msr_pretty.json  msr_pretty_small.json  save.json  teste.json
serde_play/src/: main.rs
src/: main.rs  main_gd.rs
