[package]
name = "arm-lsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5.8"
lsp-server = "0.7.2"
lsp-types = "0.94.0"
serde = { version = "1.0.181", features = ["derive"] }
serde_json = "1.0.104"
